# mewlib

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  justfile  mewlib.c  mewlib.h
examples/: CMakeLists.txt
examples/containers/: assocmap.c  vector.c
examples/html/: attributes.c  basic.c  controlflow.c
examples/http/: directory_listing.c  file_server.c
include/mew/: alloc.h  core.h  html.h  http.h  ini.h  log.h  str.h  thrdpool.h  unit.h  utils.h
include/mew/containers/: hashmap.h  map.h  rbtree.h  vector.h
include/mew/containers/map/: assoc.h  hashmap.h
include/mew/core/: alloc.h  allocators.h  os.h  strings.h  types.h  utils.h
include/mew/core/allocators/: arena.h  malloc.h
include/mew/core/os/: error.h  fs.h  macros.h  socket.h  threads.h  utils.h
include/mew/core/strings/: convert.h  cstr.h  sb.h  sv.h
include/mew/http/: common.h  fs.h  handler.h  headermap.h  request.h  response.h  router.h  server.h
include/mew/os/: socket.h  threads.h
src/: all.c  alloc.c  containers.c  core.c  html.c  http.c  ini.c  log.c  str.c  thrdpool.c  utils.c
src/containers/: hashmap.c  map.c  rbtree.c  vector.c
src/containers/map/: assocmap.c  hashmap.c
src/core/: alloc.c  allocators.c  os.c  strings.c  utils.c
src/core/allocators/: arena.c  malloc.c
src/core/os/: error_posix.c  fs_posix.c  fs_windows.c  socket_posix.c  socket_windows.c  threads.c  threads_posix.c  threads_windows.c  utils.c
src/core/strings/: convert.c  cstr.c  sb.c  sv.c
src/http/: common.c  fs.c  headermap.c  request.c  response.c  router.c  server.c
src/os/: fs_posix.c  socket_posix.c  socket_windows.c
tests/: CMakeLists.txt
tests/containers/: hashmap.c  map.c  vector.c
tests/containers/map/: assoc.c  hashmap.c
tests/core/strings/: cstr.c  sb.c
